# cyber-air-hockey

./: .gitignore  COMPONENT_FILE_TREE.md  COMPONENT_USAGE_EXAMPLES.md  DEPLOY.md  DESIGN_VARIATIONS_PLAN.md  LANDING_V2_ARCHITECTURE.md  LANDING_V2_CHECKLIST.md  LANDING_V2_ENHANCEMENTS.md  LANDING_V2_EXPERIENCE.md  LANDING_V2_SUMMARY.md  LANDING_V2_VISUAL_GUIDE.md  LANDING_V3_ARCHITECTURE.md  LANDING_V3_DESIGN_SYSTEM.md  LANDING_V3_FILES.md  LANDING_V3_SUMMARY.md  LANDING_V4_GUIDE.md  LANDING_V7_ARCHITECTURE.md  LANDING_V7_CURSOR_POSSESSION.md  LANDING_V7_QUICKSTART.md  PARTICLE_GENESIS_GUIDE.md  PARTICLE_GENESIS_VISUAL.md  THEMED_COMPONENTS_SUMMARY.md  THEMES_SUMMARY.md  THEME_DESIGN_SPECS.md  THEME_IMPLEMENTATION_GUIDE.md  THEME_VISUAL_COMPARISON.md  THEME_VISUAL_MOCKUPS.md  WATER_REFLECTION_LANDING.md  next.config.ts  package-lock.json  package.json  vercel.json
.serena/: project.yml
contracts/: deploy.sh
contracts/air-hockey/: Cargo.toml
contracts/air-hockey/.cargo/: config.toml
contracts/air-hockey/src/: contract.rs  lib.rs  service.rs  state.rs
docs/: DEPLOYMENT_PLAN.md  DYNAMIC_LINERA_INTEGRATION_PLAN.md
docs/context/: conversation_2026-02-01_0508.md  conversation_2026-02-01_0545.md  conversation_2026-02-01_0642.md  conversation_2026-02-01_0650.md  conversation_2026-02-01_0700.md  conversation_2026-02-01_0930.md  conversation_2026-02-01_0945.md  conversation_2026-02-01_1025.md  conversation_2026-02-01_1030.md  conversation_2026-02-01_1045.md  (+4 more)
server/: Dockerfile  Dockerfile.linera  package-lock.json  package.json  railway.json  render.yaml  start.sh
(+277 files in other folders)
